# arch-homework

./: components.md  context.md  task.md
services/: CMakeLists.txt  catalog_main.cpp  docker-compose.yml  index.yaml
services/catalog_service/: Dockerfile
services/my_service/: Dockerfile
